Restructure project to my taste

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#36964c" />
+
+    <!-- <meta name="msapplication-square70x70logo" content="%PUBLIC_URL%/favicons/windows-tile-70x70.png">
+    <meta name="msapplication-square150x150logo" content="%PUBLIC_URL%/favicons/windows-tile-150x150.png">
+    <meta name="msapplication-square310x310logo" content="%PUBLIC_URL%/favicons/windows-tile-310x310.png">
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/favicons/windows-tile-144x144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="%PUBLIC_URL%/favicons/apple-touch-icon-152x152-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="%PUBLIC_URL%/favicons/apple-touch-icon-120x120-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="%PUBLIC_URL%/favicons/apple-touch-icon-76x76-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="%PUBLIC_URL%/favicons/apple-touch-icon-60x60-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="%PUBLIC_URL%/favicons/apple-touch-icon-144x144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="%PUBLIC_URL%/favicons/apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="%PUBLIC_URL%/favicons/apple-touch-icon-72x72-precomposed.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/favicons/apple-touch-icon.png">
+    <meta name="mobile-web-app-capable" value="yes">
+    <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/favicons/homescreen-192x192.png">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="64x64" href="%PUBLIC_URL%/favicons/favicon.png">
+
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="fb:app_id" content="3162061603847510">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="@the_nemz" /> -->
+
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +45,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
