--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@the_nemz" /> -->
 
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
